[package]
name = "interacting-state-machine"
version = "0.1.0"
authors = ["snsinfu <snsinfu@gmail.com>"]
edition = "2018"
repository = "https://github.com/snsinfu/interacting-state-machines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
json5 = "0.2"
argparse = "0.2"
